Fix slide-to-action on iphone x

--- a/packages/lightwallet/mobile/src/app/transact/send/send-confirmation/send-confirmation.scss
+++ b/packages/lightwallet/mobile/src/app/transact/send/send-confirmation/send-confirmation.scss
@@ -1,7 +1,12 @@
 .ios view-send-confirmation {
-  ion-footer.footer slide-to-action .container {
-    padding-bottom: const(safe-area-inset-bottom);
-    padding-bottom: env(safe-area-inset-bottom);
+  ion-footer.footer slide-to-action {
+    height: calc(80px + const(safe-area-inset-bottom));
+    height: calc(80px + env(safe-area-inset-bottom));
+
+    .container {
+      padding-bottom: const(safe-area-inset-bottom);
+      padding-bottom: env(safe-area-inset-bottom);
+    }
   }
 }
 
